Questionnaire: Renamed file names, some layout issues solved.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,6 +145,7 @@ Audit Page
 
 .radioDisplayHorizontal {
     display: inline-flex;
+    margin-bottom: 16px;
 }
 
 .radioDisplayHorizontal .radioItemFlex {
